--- a/themes/cedrictheme/style.css
+++ b/themes/cedrictheme/style.css
@@ -4,10 +4,9 @@ Theme Name: CedricTheme
 Text Domain: CedricTheme
 Version: 1.0
 Description: thema voor bo opdracht
-Tags: new theme
+Tags: m8prog
 Author: Cedric Kiraly
 Author URI: https://34737.hosts1.ma-cloud.nl/
-
 
 
 */
