--- a/themes/cedrictheme/style.css
+++ b/themes/cedrictheme/style.css
@@ -1,12 +1,16 @@
 /*
 
 Theme Name: CedricTheme
-Text Domain: CedricTheme
+Text Domain: m8progCedricTheme
+Domain Path: /languages
+Requires at least: 6.5.3
+Requires PHP: 6.5.3
 Version: 1.0
-Description: thema voor bo opdracht
+Description: thema voor prog opdracht
 Tags: m8prog
 Author: Cedric Kiraly
 Author URI: https://34737.hosts1.ma-cloud.nl/
 
 
 */
+
