--- a/themes/src/scss/main.scss
+++ b/themes/src/scss/main.scss
@@ -1,10 +1,17 @@
-@import "custom";
-@import "~bootstrap/scss/bootstrap";
+
 
 h1 {
-  background: $gray-200;
+  background: green;
 }
 
 .admin-bar nav.navbar {
-  top: 100;
+  top: 0;
+}
+
+div{
+    background: cyan;
+}
+
+.containter-my5{
+    font-size: 500%;
 }
