--- a/themes/src/scss/main.scss
+++ b/themes/src/scss/main.scss
@@ -11,3 +11,33 @@ h1 {
 body {
   background-color:pink;
 }
+
+.wp-block-group{
+  background: lightgray;
+}
+
+.navbar{
+  background: #604f4f;
+  color: #fff;
+}
+
+.navbar-brand{
+  color: #fff;
+}
+
+.navlink{
+  color: #fff;
+}
+
+.collapse{
+  color: white;
+}
+
+
+.mt-5{
+  color: #fff;
+}
+
+.menu-hoofdmenu{
+  background: green;
+}
