--- a/themes/cedrictheme-child/style.css
+++ b/themes/cedrictheme-child/style.css
@@ -5,51 +5,132 @@
  Author:       Cedric Kiraly
  Author URI:   https://34737.hosts1.ma-cloud.nl
  Template:     cedrictheme
- Version:      1.0.0
+ Version:      1.0.5
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  cedrictheme-child
 
 */
 
+
+* {
+    padding: 0;
+    margin: 0;
+  }
+  
+
 body {
-    background-color:lightgray;
+    background-color:rgb(252, 252, 252);
 }
 
-.wp-block-group{
-    background: lightgray;
-}
+nav {
+    display: flex; /* 1 */
+    justify-content: space-between; /* 2 */
+    padding: 1rem 2rem; /* 3 */
+    background: #F1F1F1; /* 4 */
+  }
+  
+  nav ul {
+    display: flex; /* 5 */
+    list-style: none; /* 6 */
+  }
+  
+  nav li {
+    padding-left: 1rem; /* 7! */
+  }
 
-.navbar{
-    background: hsl(0, 5%, 25%);
+  nav a {
+    text-decoration: none;
+    color: #0d47a1
+  }
+
+
+  .brand{
+    font-weight: bold;
+  }
+
+  .items{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+  }
+
+  .item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    
+  }
+  
+  a{
     color: #fff;
+  }
+
+  main{
+    display: flex;
+    height: 30rem;
+    width: auto;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    
+  }
+  
+
+  .container {
+    max-width: 1140px; /* Adjust max-width for your content */
+    margin: 0 auto; /* Center the container horizontally */
+    padding: 0 1rem; /* Add some padding for visual balance */
+  }
+
+  
+  
+  /* Adjust font sizes and colors as needed */
+  .content-area h2, .content-area h3, .content-area h4 {
+    font-size: 1.8rem; /* Adjust heading sizes */
+    margin-bottom: 1rem; /* Add some space after headings */
+  }
+  
+  .content-area p {
+    font-size: 1rem; /* Adjust paragraph font size */
+    line-height: 1.5; /* Adjust line height for readability */
+  }
+  
+  /* Add styles for specific elements like the_excerpt, the_date, etc. */
+  .the-excerpt {
+    /* Customize styles for the excerpt */
+  }
+  
+  .the-date {
+    /* Customize styles for the date */
+  }
+  
+
+
+
+  @media only screen and (max-width: 600px) {
+    nav {
+      flex-direction: column;
+    }
+    nav ul {
+      flex-direction: column;
+      padding-top: 0.5rem;
+    }
+    nav li {
+      padding: 0.5rem 0;
+    }
+  } 
+  
+  
+  
+.col-lg-8 px-0{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.navbar-brand{
-    color: #fff;
-}
-
-.navbar-brand:hover{
-    color: #fff;
-}
-
-.nav-link{
-    color: #fff;
-}
-
-.nav-link:hover{
-    color: #fff;
-}
-
-.collapse{
-    color: white;
-}
-
-
-.mt-5{
-    color: #fff;
-}
-
-.menu-item{
-    color: #fff;
-}
+.menu-hoofdmenu{
+    background: green;
+  }
